# Kea-Student-2023

./: .gitignore  StripeIframe.html
01_modules/node_commenjs/: index.js  module.js
01_modules/node_esmodules/: index.js  module.js
02._data_formats/: me.csv  me.json  me.txt  me.xml  me.yaml
02._data_formats/Homework_File_formats_bonanza/python/: Assigment1.py
04._basic_servers/Node/: app.js  package-lock.json  package.json
04._basic_servers/python/: Untitled.ipynb  main.py  pyproject.toml
05.date/Node/: index.js
05.date/Python/: main.py
06.Server_to_server/Node/: app.js
06.Server_to_server/python/: main.py  pyproject.toml
07.dotenv/Node/: .env_sample  index.js  package.json
07.dotenv/Python/: main.py  pyproject.toml
08._database_documentation/: classicmodels.json  sql8603388_mro_docs.html
09.openAPI/Node/: app.js
09.openAPI/Node/routers/: usersRouter.js
09.openAPI/Python/: main.py  pyproject.toml
09.openAPI/Python/routers/: spacecraft_router.py
12_server-sent_event/Node/: app.js
12_server-sent_event/Node/public/: index.html
12_server-sent_event/Python/: main.py  pyproject.toml
12_server-sent_event/Python/templates/: index.html
13._github_webhooks/Node/: app.js
13._github_webhooks/Python/: main.py  pyproject.toml
14._Azure/api/HttpTrigger1/: __init__.py  function.json
15_websockets/Node/: client.js  index.html  server.js
15_websockets/Python/: connection_manager.py  main.py
16.CORS/Node/: app.js
16.CORS/python/: index.html  main.py
webhook_integration_assign/Python/: main.py  pyproject.toml
(+1 files in other folders)
